src/objects/Glxy_LeasePayment__c.object
<CustomObject>
    <description>Lease Payment object, child of Lease Digest and part of Transaction process for Galaxy</description>
    <fields>
        <fullName>Annual_Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digest_ID__c</fullName>
        <label>Digest ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_DT__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_DT__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseDigest__c</fullName>
        <label>Lease Digest</label>
        <referenceTo>Glxy_LeaseDigest__c</referenceTo>
        <relationshipLabel>Lease Payments</relationshipLabel>
        <relationshipName>Lease_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LeasePaymentIDParentID__c</fullName>
        <description>REXUS has a Payment ID and Payment ID Master; not sure how that works; but each payment lines match one of these 2 ID&apos;s; we had the Payment ID earlier, adding the new one in G2 release 2.3 for fund certs ...</description>
        <label>Lease Payment ID (Parent ID)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_ID__c</fullName>
        <label>Lease ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentID__c</fullName>
        <externalId>true</externalId>
        <label>Lease Payment ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Description__c</fullName>
        <label>Payment Description</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency_CD__c</fullName>
        <label>Payment Frequency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type_CD__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResultingPaymentID__c</fullName>
        <formula>IF(
Len(Text(LeasePaymentIDParentID__c)) = 0, 
PaymentID__c, 
LeasePaymentIDParentID__c
)</formula>
        <label>Payment ID *</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_to_OA_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to OA Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>Annual_Amount__c  *  WithHoldMonths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WithHoldMonths__c</fullName>
        <label>Withhold Number of Months</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lease Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lease Payment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>